testfx/errors/error_tests/edge_11_arrow_function.fx
// 测试: 使用 => 箭头函数语法
add := (a, b) => a + b
println(add(1, 2))
